fixing styles of a project pages messing up because of suspense? Adding grayscale behaviour for images and svg in dark mode

--- a/src/base-styles/theme-colors.styles.scss
+++ b/src/base-styles/theme-colors.styles.scss
@@ -18,6 +18,11 @@ $text-colour-dark: #fff;
     --important-object-colour: #{$primary-colour-dark};
     --important-object-text-colour: #{$foreground-text-colour-dark};
     --page-text-colour: #{$text-colour-dark};
+
+    img,
+    svg {
+        filter: grayscale(55%) !important;
+    }
 }
 
 .App,
